<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".VideoPlayer">


    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/parentRelative"
        android:layout_height="wrap_content">

        <VideoView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:id="@+id/video_player"/>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/middleRelative"
        android:paddingTop="10dp"
        android:layout_below="@+id/parentRelative"
        android:background="#000"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/white_knight"
            android:id="@+id/t1"
            android:textStyle="bold"
            android:textColor="#fff"
            android:textSize="18sp"
            android:paddingTop="10dp"
            android:paddingStart="10dp"/>

        <TextView
            android:id="@+id/t2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/t1"
            android:paddingStart="10dp"
            android:paddingTop="15dp"
            android:text="@string/_2022_documentry_drama_hindi"
            android:textColor="@color/white"
            android:textSize="17sp"
            tools:ignore="TextContrastCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:paddingTop="20dp"
            android:paddingStart="10dp"
            android:layout_below="@+id/t2"
            android:id="@+id/desc"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:textColor="#fff"
                android:textAlignment="viewStart"
                android:text="@string/description"
                android:layout_height="wrap_content"
                android:id="@+id/t3"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_below="@+id/desc"
            android:id="@+id/tworow"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:paddingHorizontal="30dp"
                android:id="@+id/thirdrow"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="15dp"

                    android:paddingTop="20dp"
                    android:id="@+id/im1"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="20dp"
                    android:contentDescription="@string/jcxhuds" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingTop="5dp"
                    android:text="@string/watchlist"
                    android:textColor="#716F6F"
                    tools:ignore="TextContrastCheck" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_below="@+id/t2"
                android:paddingHorizontal="30dp"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="wrap_content"

                    android:paddingTop="15dp"
                    android:id="@+id/im2"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingTop="5dp"
                    android:text="@string/trailer"
                    android:textColor="#686767"
                    tools:ignore="TextContrastCheck" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_below="@+id/t2"
                android:paddingHorizontal="30dp"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="wrap_content"
                    android:paddingTop="15dp"
                    android:id="@+id/im3"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_below="@+id/im1"
                    android:layout_height="wrap_content"
                    android:text="@string/share"
                    android:paddingTop="5dp"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#777575"
                    />

            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:paddingStart="1dp"
            android:id="@+id/four"
            android:layout_below="@+id/tworow"
            android:paddingTop="20dp"
            android:layout_height="wrap_content"
            tools:ignore="NotSibling">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/white"
                android:contentDescription="@string/hfh" />
        </LinearLayout>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/childRelative"
        android:layout_below="@+id/middleRelative"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:backgroundTint="@color/black"
            android:orientation="vertical"
            android:layout_height="185dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/more_videos"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:paddingStart="15dp"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:paddingTop="15dp"/>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:id="@+id/rv"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>